src/test/ui/hygiene/nested_macro_privacy.stderr
error[E0616]: field `i` of struct `foo::S` is private
  --> $DIR/nested_macro_privacy.rs:15:5
   |
LL |     S::default().i;
   |     ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0616`.
